--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,18 @@
     <groupId>org.example</groupId>
     <artifactId>HF2</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>jar</packaging>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <build>
+
+
+
+            <finalName>HF2</finalName>
+
+
+    </build>
 </project>
